# libmidiplayback

./: .gitmodules  CMakeLists.txt  libmidiplayback_global.h  midiplayer.cpp  midiplayer.h
example/: testmid_play.cpp
